--- a/Jose Zuniga Portfolio.html
+++ b/Jose Zuniga Portfolio.html
@@ -68,8 +68,10 @@
   }
   p, li {
     font-size: 14px;
-    line-height: 1.4;  /* slightly tighter */
-    margin-bottom: 4px; /* reduced from 7px */
+    line-height: 1.4;
+    margin-bottom: 4px;
+    text-align: justify;
+    text-justify: inter-word;
   }
   ul {
     padding-left: 20px;
