trying to make changes

--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
         <h2>Work Experience</h2>
 
         <div>
-          <h3>iTree Training | Senior Program Agile Manager</h3>
-          <p><em>2022 – 2025</em></p>
+          <h3>iTree Training | Senior Program Agile Manager <em>| 2022 – 2025</em></h3>
           <p>iTree is a global technology company that provides innovative training programs to enhance organizational efficiency and productivity.</p>
           <p><strong>Role Description:</strong> Led several Agile projects, closely working with cross-functional teams to meet business goals, while ensuring alignment with company priorities. Managed resources, capacity planning, and Agile ceremonies, all while driving business value through the implementation of Scrum and SAFe methodologies.</p>
           <ul>
