--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
           <h3>iTree Training | Senior Project Agile Manager / Agile Coach (Fully Remote)</h3>
           <p><em>April 2020 – Present | Consultant / Freelance</em></p>
           <p>iTree Training is a global consultancy providing corporate training and Agile transformation services, working with multinational clients across automotive, manufacturing, and technology sectors. Industry: Professional Services, Agile Coaching, Automotive (Client: Nissan)</p>
+          <p><strong>Role:</strong> As an Agile Coach, I led multi-country transformation programs, scaled Agile practices, and drove delivery efficiency for clients like Nissan.</p>
           <ul>
             <li>Led multi-country transformation programs, scaled Agile practices, and drove 50% delivery efficiency for clients like Nissan.</li>
             <li>Successfully managed a year-long, multi-country program for Nissan with a 95% on-time delivery rate.</li>
@@ -151,16 +152,17 @@
             <li>Standardized 6+ CMS websites and supervised digital transformations using WordPress and SharePoint.</li>
             <li>Championed servant leadership and psychological safety to minimize friction in delivery.</li>
             <li>Facilitated Agile ceremonies and led value stream realignments for product-focused delivery.</li>
+            <li>Worked closely with executives and stakeholders to drive Agile transformation enterprise-wide and conducted Agile workshops improving maturity.</li>
+            <li>Conducted Agile workshops and implemented fluency models, improving team performance and Agile maturity.</li>
           </ul>
-          <p>Worked closely with executives and stakeholders to drive Agile transformation enterprise-wide and conducted Agile workshops improving maturity.</p>
         </div>
 
         <div>
           <h3>Infinite Computer Solutions | Senior Scrum Master (Healthcare Sector, Fully Remote)</h3>
           <p><em>April 2022 – December 2024</em></p>
           <p>Infinite is a global technology provider of IT services and digital transformation in healthcare, finance, and telecom.</p>
+          <p><strong>Role:</strong> Led Agile delivery and scaled team performance across healthcare products while automating key operational processes.</p>
           <ul>
-            <li>Led Agile delivery and scaled team performance across healthcare products by 30%, automating key processes.</li>
             <li>Reduced onboarding/offboarding by 60% and manual reporting by 30% through automation.</li>
             <li>Enhanced team capacity alignment by 25% via healthcare taxonomy mapping across domains.</li>
             <li>Coached 5 agile teams on backlog refinement, metrics, and Scrum ceremonies improving delivery speed and transparency.</li>
@@ -175,15 +177,20 @@
           <h3>Coca-Cola LATAM | Business Relationship Analyst / Product Owner (Hybrid, 50% Travel)</h3>
           <p><em>November 2018 – April 2022</em></p>
           <p>Coca-Cola LATAM is responsible for beverage manufacturing, distribution, and digital transformation in Latin America.</p>
+          <p><strong>Role:</strong> As Product Owner, I delivered CMS and e-commerce platforms, scaled Agile practices across 4 countries, and led CRM and continuity programs.</p>
           <ul>
-            <li>Delivered CMS and e-commerce platforms, scaled Agile across 4 countries, led CRM and continuity programs.</li>
-            <li>Key liaison between business stakeholders and cross-functional teams; managed requirements aligning with strategic objectives.</li>
-            <li>Developed product vision and roadmaps, partnered with UX/UI teams for user-centered design.</li>
-            <li>Aligned stakeholders by managing expectations and resolving conflicts proactively.</li>
-            <li>Oversaw UAT and contributed to go-to-market planning and post-launch enhancements.</li>
-            <li>Defined actionable user stories with acceptance criteria; coached Product Owners improving backlog grooming by 20%.</li>
-            <li>Standardized JIRA, Confluence, and ServiceNow aligned to SDLC; boosted Brazil sales by 37% via Salesforce CMS enhancements.</li>
-            <li>Led RFPs, vendor assessments, and stakeholder engagement ensuring alignment.</li>
+            <li>Served as the key point of contact between business stakeholders and cross-functional development teams, gathering, documenting, and prioritizing business requirements to ensure alignment with strategic objectives.</li>
+            <li>Contributed to shaping the product vision, roadmap, and release plans in close coordination with stakeholders, PMO, and IT leadership.</li>
+            <li>Partnered with UX/UI teams and developers to ensure intuitive, user-centered designs and deliver impactful, value-driven experiences.</li>
+            <li>Aligned cross-functional stakeholders by managing expectations, balancing priorities, and proactively resolving conflicts to build trust and drive collaboration.</li>
+            <li>Oversaw user acceptance testing (UAT), contributed to go-to-market planning, and collected post-launch insights to support iterative product enhancements.</li>
+            <li>Defined and groomed product backlogs by creating actionable user stories with clear acceptance criteria, ensuring feature development aligned with business value and stakeholder priorities.</li>
+            <li>Led business unit acquisition efforts and oversaw Coca-Cola’s iRed Global Solution project, impacting over 50% of Mexico’s bottlers.</li>
+            <li>Defined Agile standards across 4 countries, achieving full adoption of Agile business continuity methodology.</li>
+            <li>Coached 5 Product Owners, improving backlog grooming and communication, resulting in a 20% increase in throughput.</li>
+            <li>Standardized service management practices across Jira, Confluence, and ServiceNow, aligned to Coca-Cola’s SDLC.</li>
+            <li>Provided Salesforce CMS e-commerce enhancements that increased Brazil's sales by 37% and converted a WordPress project in Buenos Aires that raised traffic by 17%.</li>
+            <li>Led RFPs, vendor assessments, and stakeholder engagements to ensure business-IT alignment</li>
           </ul>
         </div>
 
@@ -191,11 +198,16 @@
           <h3>Equifax | Project Manager / Scrum Master (Hybrid)</h3>
           <p><em>August 2017 – November 2018</em></p>
           <p>Equifax provides risk management and information solutions globally.</p>
+          <p><strong>Role:</strong> Oversaw Agile-driven CMS redesign and mobile-first projects, resulting in higher user engagement and more streamlined sprint execution.</p>
           <ul>
-            <li>Managed Agile CMS redesign and mobile-first initiatives, boosting user engagement by 30% and sprint efficiency by 20%.</li>
-            <li>Led Liferay CMS redesign, delivered mobile responsive site improving UX and accessibility.</li>
-            <li>Communicated project status and coached Agile best practices improving velocity by 20% and reducing development cycles by 25%.</li>
-            <li>Led Agile ceremonies and removed impediments maintaining focus on sprint goals.</li>
+            <li>Led Liferay CMS redesign across multi-language sites, increasing engagement by 30%.</li>
+            <li>Delivered Equifax’s first mobile-responsive site, enhancing user experience and accessibility.</li>
+            <li>Communicate project status, progress, and risks to stakeholders, ensuring transparency and alignment across technical and business teams.</li>
+            <li>Coach and mentor team members on Agile principles and best practices to improve productivity and team performance.</li>
+            <li>Monitor and report key performance indicators (KPIs) and metrics to drive continuous improvement in project delivery processes.</li>
+            <li>Increased sprint velocity by 20% and reduced development cycles by 25% through Scrum ceremonies and Agile team coaching.</li>
+            <li>Lead and facilitate Agile ceremonies such as daily stand-ups, sprint planning, retrospectives, and backlog refinement to ensure smooth sprint execution. </li>
+            <li>Removed team impediments proactively by collaborating with external departments, driving resolution and maintaining focus on sprint goals.</li>
           </ul>
         </div>
 
@@ -203,10 +215,14 @@
           <h3>GBM (IBM Latin America) | Junior Project Manager, Software & IT Solutions</h3>
           <p><em>December 2014 – July 2017</em></p>
           <p>GBM delivers enterprise IT services and cloud solutions across Latin America.</p>
+          <p><strong>Role:</strong> Managed rollout of IBM Smart Solutions across the region, enhancing operational workflows and cutting client downtime.</p>
           <ul>
-            <li>Coordinated IBM Smart solution rollouts, increasing efficiency by 20% and reducing client downtime.</li>
-            <li>Supported senior PMs with tracking, risk management, and documentation.</li>
-            <li>Delivered 15+ IBM IT-Smart solutions regionally; reduced client idle time by 98% through proactive planning.</li>
+            <li>Assist in planning, scheduling, and coordinating software development projects to ensure timely delivery.</li>
+            <li>Support senior project managers in tracking project progress, managing risks, and resolving issues.</li>
+            <li>Help prepare project documentation such as status reports, meeting minutes, and project plans.</li>
+            <li>Provided over 15 IBM IT-Smart solutions regionally, improving operational efficiency by 20%.</li>
+            <li>Reduced client idle time by 98% through project planning, risk mitigation, and proactive support.</li>
+            <li>Delivered client-specific solutions and training across LATAM, promoting IBM technology adoption.</li>
           </ul>
         </div>
 
@@ -214,10 +230,13 @@
           <h3>McKinsey & Company | Data Engineer (Remote, 50% Travel)</h3>
           <p><em>November 2013 – November 2014</em></p>
           <p>McKinsey is a leading global consulting firm specializing in data-driven performance improvement.</p>
+          <p><strong>Role:</strong> Integrated data from multiple HR information systems into OrgLab—McKinsey’s organizational design platform—to uncover hidden insights and enable data-driven decision-making</p>
           <ul>
-            <li>Developed data pipelines and analytical models contributing $10M cost savings and 80% proposal win rate.</li>
-            <li>Engineered ETL workflows and supported data accuracy and insights enabling faster decision-making.</li>
-            <li>Created and managed secure data environments and optimized data models for analytics.</li>
+            <li>Integrate data from multiple HR information systems into OrgLab.</li>
+            <li>Ensure data quality and consistency across integrated systems.</li>
+            <li>Collaborate with organizational effectiveness experts to design and implement organizational structures.</li>
+            <li>Apply cyber-security best practices and technologies to protect company and personal data.</li>
+            <li>Work seamlessly with multiple HR information systems to support organizational design and effectiveness initiatives.</li>
           </ul>
         </div>
 
@@ -225,13 +244,18 @@
           <h3>Hewlett Packard (HP) | Incident Manager / Server Support Engineer (LATAM) (Hybrid)</h3>
           <p><em>Nov 2006 – Dec 2008; Apr 2011 – Nov 2012</em></p>
           <p>HP provides enterprise support and server infrastructure services.</p>
+          <p><strong>Role:</strong> Managed incident resolution for enterprise clients such as Clorox and Bimbo, enhancing system uptime and ensuring SLA compliance across complex, multi-platform environments</p>
           <ul>
-            <li>Led incident resolution for clients such as Clorox and Bimbo, improving uptime and SLA compliance.</li>
+            <li>Managed incident resolution processes for clients like Clorox, Bimbo, and the U.S. Navy.</li>
             <li>Reduced resolution time by 35%, improved uptime, and increased customer satisfaction by 30%.</li>
-            <li>Provided Level 2 support and coordinated with DevOps for continuous operations.</li>
-            <li>Acted as escalation and communication bridge during high-severity incidents.</li>
-            <li>Performed root cause analysis and supported ITIL-aligned incident management process.</li>
-            <li>Developed dashboards and reports communicating trends and impacts to leadership.</li>
+            <li>Provided Level 2 support across multi-platform servers, achieving 95% SLA compliance.</li>
+            <li>Automated server tasks and coordinated with DevOps and Security teams for continuous operations.</li>
+            <li>Lead end-to-end incident response and resolution for critical IT systems impacting Clorox’s manufacturing, supply chain, and consumer operations, ensuring minimal disruption to business continuity.</li>
+            <li>Act as the escalation point and communication bridge between IT support teams, business units, and external partners during high-severity incidents.</li>
+            <li>Perform root cause analysis (RCA) for recurring or high-impact incidents, and collaborate with engineering and DevOps teams to implement corrective and preventative actions.</li>
+            <li>Maintain adherence to Clorox’s ITIL-aligned incident management process, driving compliance with SLAs and supporting SOX and cybersecurity requirements.</li>
+            <li>Develop real-time dashboards and post-incident reports to communicate incident trends, impacts, and improvements to IT leadership and stakeholders.</li>
+            <li>Support continuous service improvement initiatives, identifying patterns and recommending automation or system enhancements to reduce incident volume and impact.</li>
           </ul>
         </div>
 
@@ -239,8 +263,8 @@
           <h3>Bac Credomatic Bank | Regional Support Technician (Onsite)</h3>
           <p><em>December 2008 – March 2011</em></p>
           <p>Bac Credomatic is a leading financial institution in Central America.</p>
+          <p><strong>Role:</strong> Provided Level 1/2 IT support across regional branches, ensuring 99% uptime and improving incident management protocols.</p>
           <ul>
-            <li>Provided Level 1/2 IT support across branches, ensuring 99% uptime and improving incident management protocols.</li>
             <li>Maintained 99% uptime and reduced incident escalations by 25% through improved protocols.</li>
             <li>Handled access control and troubleshooting ensuring compliance and uptime.</li>
           </ul>
@@ -267,7 +291,9 @@
           <li>ITIL v3 Foundations</li>
           <li>Six Sigma Yellow Belt & Black Belt</li>
           <li>Design Thinking for Business Strategy (University of Sydney)</li>
-          <li>VMware vSphere, IBM Bluemix, Turbonomic Associate</li>
+          <li>VMware vSphere</li>
+          <li>IBM Bluemix</li>
+          <li>Turbonomic Associate</li>
         </ul>
       </div>
 
@@ -314,8 +340,12 @@
       <div class="section additional-info">
         <h2>Additional Experience</h2>
         <ul>
-          <li>Trainer at LearnQuest and SWAT Consulting Services</li>
-          <li>Specialized in AI Prompt Engineering, HEDIS Care Management, Cybersecurity, SEO, and Google Analytics</li>
+          <li>Trainer at <strong>LearnQuest</strong> and <strong>SWAT Consulting Services</strong>: Delivered professional training programs across diverse topics to enhance organizational capabilities.</li>
+          <li>AI Prompt Engineering: Developed and provided expert training on leveraging AI prompt techniques for improved digital solutions.</li>
+          <li>Trained on HEDIS Care Management, Cybersecurity, SEO, and Google Analytics.</li>
+          <li><strong>Agile Community Leadership:</strong> Presented at the 2023 Agile LATAM Conference on scaling Scrum practices across multinational teams. Regular contributor to Agile Costa Rica meetups, sharing insights on value stream mapping and enterprise transformation.</li>
+          <li><strong>Corporate Training & Mentorship:</strong> Designed and delivered internal Agile workshops for client organizations, directly coaching over 20 Scrum Masters and Product Owners in advanced Scrum and Kanban adoption. Mentored new Agile leaders, resulting in improved team performance and career progression for mentees.</li>
+          <li><strong>Volunteer Agile Consulting:</strong> Provided pro bono Agile coaching and digital transformation strategies to two non-profit organizations, helping them reduce project lead times and increase volunteer engagement using lightweight Scrum frameworks.</li>
         </ul>
       </div>
     </div>
